footer elements alignment fix

--- a/resources/css/main.less
+++ b/resources/css/main.less
@@ -82,7 +82,7 @@ html, body {
 	font-family: 'Raleway', sans-serif;
 	.footer-element-container {
 		overflow: hidden;
-		width: 105px;
+		width: 150px;
 		margin: 0 auto;
 		a {
 			text-decoration: none;
